--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,21 +31,6 @@
     "webpack-dev-server": "^1.16.2"
   },
   "dependencies": {
-    "@emotion/core": "^10.0.10",
-    "@thumbtack/thumbprint-react": "^0.7.3",
-    "json-loader": "^0.5.7",
-    "material-table": "^1.36.5",
-    "react-datepicker": "^2.5.0",
-    "react-loadbar": "^0.1.2",
-    "react-loader-spinner": "^2.3.0",
-    "react-month-picker": "^1.3.9",
-    "react-month-picker-input": "^1.2.2",
-    "react-month-year-picker": "^1.0.1",
-    "react-promise-tracker": "^2.0.3",
-    "react-select": "^2.4.3",
-    "react-spinners": "^0.5.4",
-    "react-year-month-picker": "^1.0.0",
-    "react-year-month-selector": "0.0.8",
-    "react-year-picker": "^0.3.7"
+    "react-select": "^2.4.3"
   }
 }
