nome do deputado na lista de despesas

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server --progress --colors --inline --hot",
-    "production": "webpack --progress -p",
-    "deploy:prod": "rsync -avzhe ssh --progress ./public/* root@deputados:/root/deputados/React-DespesasDeputados/frontend"
+    "production": "webpack --progress -p"
   },
   "keywords": [],
   "author": "",
